# semantic_manifolds

./: .gitignore  1_existence.ipynb  2_structure.ipynb  README.md  config.yaml  pyproject.toml
data/: embed.py  generate.py
src/: manifold.py  reverse.py  utils.py
src/dimensionality_reduction/: autoencoder.py  base.py  spherical_autoencoder.py  tangent_pca.py
src/models/: gaussian_mixture.py  von_mises.py
src/parametric_models/: fischer_bingham.py
